istio-resources/grafana/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - pipr-grafana.dol.go.th
    port:
      name: http
      number: 80
      protocol: HTTP
